--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-native": "0.72.4",
     "react-native-safe-area-context": "4.6.3",
     "react-native-screens": "~3.22.0",
+    "react-native-video": "^5.2.1",
     "react-redux": "^8.1.2",
     "redux": "^4.2.1"
   },
