--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@react-navigation/bottom-tabs": "^6.5.8",
+    "@react-navigation/material-top-tabs": "^6.6.5",
     "@react-navigation/native": "^6.1.7",
     "@react-navigation/native-stack": "^6.9.13",
     "@reduxjs/toolkit": "^1.9.5",
@@ -20,8 +21,10 @@
     "react": "18.2.0",
     "react-native": "0.72.4",
     "react-native-animatable": "^1.3.3",
+    "react-native-pager-view": "^6.2.2",
     "react-native-safe-area-context": "4.6.3",
     "react-native-screens": "~3.22.0",
+    "react-native-tab-view": "^3.5.2",
     "react-native-video": "^5.2.1",
     "react-redux": "^8.1.2",
     "redux": "^4.2.1"
