--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-native-pager-view": "^6.2.2",
     "react-native-safe-area-context": "4.6.3",
     "react-native-screens": "~3.22.0",
+    "react-native-stars": "^1.2.2",
     "react-native-tab-view": "^3.5.2",
     "react-native-video": "^5.2.1",
     "react-redux": "^8.1.2",
