--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react": "18.2.0",
     "react-native": "0.72.4",
     "react-native-animatable": "^1.3.3",
+    "react-native-dropdown-picker": "^5.4.6",
     "react-native-pager-view": "^6.2.2",
     "react-native-safe-area-context": "4.6.3",
     "react-native-screens": "~3.22.0",
