--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "expo": "~49.0.11",
     "expo-linear-gradient": "~12.3.0",
     "expo-status-bar": "~1.6.0",
+    "firebase": "^10.6.0",
     "react": "18.2.0",
     "react-native": "0.72.4",
     "react-native-animatable": "^1.3.3",
