--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@reduxjs/toolkit": "^1.9.5",
     "axios": "^1.5.1",
     "expo": "~49.0.11",
+    "expo-av": "^13.6.0",
     "expo-linear-gradient": "~12.3.0",
     "expo-status-bar": "~1.6.0",
     "firebase": "^10.6.0",
@@ -30,6 +31,10 @@
     "react-native-stars": "^1.2.2",
     "react-native-tab-view": "^3.5.2",
     "react-native-video": "^5.2.1",
+    "react-native-webview": "^13.6.3",
+    "react-native-youtube": "^2.0.2",
+    "react-native-youtube-iframe": "^2.3.0",
+    "react-native-ytdl": "^4.8.3",
     "react-redux": "^8.1.2",
     "redux": "^4.2.1"
   },
