--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@gorhom/bottom-sheet": "^4.5.1",
     "@react-native-async-storage/async-storage": "^1.21.0",
     "@react-navigation/bottom-tabs": "^6.5.8",
     "@react-navigation/material-top-tabs": "^6.6.5",
@@ -18,6 +19,8 @@
     "axios": "^1.5.1",
     "expo": "~49.0.11",
     "expo-av": "^13.6.0",
+    "expo-file-system": "~15.4.5",
+    "expo-image-picker": "~14.3.2",
     "expo-linear-gradient": "~12.3.0",
     "expo-status-bar": "~1.6.0",
     "firebase": "^10.6.0",
@@ -25,7 +28,9 @@
     "react-native": "0.72.4",
     "react-native-animatable": "^1.3.3",
     "react-native-dropdown-picker": "^5.4.6",
+    "react-native-gesture-handler": "~2.12.0",
     "react-native-pager-view": "^6.2.2",
+    "react-native-reanimated": "~3.3.0",
     "react-native-safe-area-context": "4.6.3",
     "react-native-screens": "~3.22.0",
     "react-native-stars": "^1.2.2",
