--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   },
   "dependencies": {
     "@gorhom/bottom-sheet": "^4.5.1",
-    "@react-native-async-storage/async-storage": "^1.21.0",
+    "@react-native-async-storage/async-storage": "1.18.2",
     "@react-navigation/bottom-tabs": "^6.5.8",
     "@react-navigation/material-top-tabs": "^6.6.5",
     "@react-navigation/native": "^6.1.7",
@@ -18,25 +18,25 @@
     "@reduxjs/toolkit": "^1.9.5",
     "axios": "^1.5.1",
     "expo": "~49.0.11",
-    "expo-av": "^13.6.0",
+    "expo-av": "~13.4.1",
     "expo-file-system": "~15.4.5",
     "expo-image-picker": "~14.3.2",
     "expo-linear-gradient": "~12.3.0",
     "expo-status-bar": "~1.6.0",
     "firebase": "^10.6.0",
     "react": "18.2.0",
-    "react-native": "0.72.4",
+    "react-native": "0.72.6",
     "react-native-animatable": "^1.3.3",
     "react-native-dropdown-picker": "^5.4.6",
     "react-native-gesture-handler": "~2.12.0",
-    "react-native-pager-view": "^6.2.2",
+    "react-native-pager-view": "6.2.0",
     "react-native-reanimated": "~3.3.0",
     "react-native-safe-area-context": "4.6.3",
     "react-native-screens": "~3.22.0",
     "react-native-stars": "^1.2.2",
     "react-native-tab-view": "^3.5.2",
     "react-native-video": "^5.2.1",
-    "react-native-webview": "^13.6.3",
+    "react-native-webview": "13.2.2",
     "react-native-youtube": "^2.0.2",
     "react-native-youtube-iframe": "^2.3.0",
     "react-native-ytdl": "^4.8.3",
